# ffpopsim

./: .gitignore  Installation.md  Makefile  ProjectHome.md  benefits.md  chronic_hiv.md  condensation.md  escape.md  examples.md  setup.py  valley.md
lib/: README
src/: Makefile  haploid_gt_dis.cpp  haploid_pop_hop.cpp  hypercube_function.cpp  popgen.h
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/python/: ffpopsim_lowd.i
static/mac_32/include/gsl/: Makefile
tests/: recombination_lowd
